--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	</header>
 
 	<main class="flex-shrink-0">
-		<div class="container">
+		<div class="container-fluid">
 			<div class="col-sm-12">
 				Eon board:
 
