--- a/index.html
+++ b/index.html
@@ -56,16 +56,43 @@
 
 	<main class="flex-shrink-0">
 		<div class="container-fluid">
-			<div class="col-sm-12">
-				Eon board:
 
-				<div class="eon-board-container">
-					<div id="eon-board" class="eon-board">
-						<div class="years"></div>
-						<div class="lifes"></div>
+			<div class="d-flex justify-content-start flex-wrap" id="life-list">
+			</div>
+
+			<div class="d-flex year-limit">
+				<span>Ver anos:</span>
+				<input type="text" id="year-begin" value="1900" />
+				<input type="text" id="year-end" value="1950" />
+				<button class="btn btn-primary" onclick="filterYears()">Filtrar</button>
+			</div>
+
+			<div class="d-flex justify-content-between">
+				<div class="d-flex justify-content-start spacing">
+					<div class="form-check form-switch">
+						<input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault" onchange="toggleCompact();">
+						<label class="form-check-label" for="flexSwitchCheckDefault">Visualzação em modo compacto</label>
+					</div>
+				</div>
+				<div class="d-flex justify-content-start badges">
+					<span class="badge badge-legend rounded-pill text-bg-primary science">Ciência e Filosofia</span>
+					<span class="badge badge-legend rounded-pill text-bg-primary arts">Artes</span>
+					<span class="badge badge-legend rounded-pill text-bg-primary politics">Política e História</span>
+				</div>
+			</div>
+
+			<!-- EON BOARD: -->
+			<div class="row">
+				<div class="col-sm-12">
+					<div class="eon-board-container">
+						<div id="eon-board" class="eon-board">
+							<div class="years"></div>
+							<div class="lifes"></div>
+						</div>
 					</div>
 				</div>
 			</div>
+
 		</div>
 	</main>
 
